--- a/example/package.json
+++ b/example/package.json
@@ -21,10 +21,12 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "faker": "^5.5.3",
+    "jetifier": "^1.6.8",
     "react": "^17.0.2",
     "react-native": "^0.66.1",
     "react-native-document-picker": "^7.1.1",
     "react-native-file-viewer": "^2.1.4",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-image-picker": "^4.1.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0"
